--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "tailwindcss": "^3.1.0"
+    },
+    "dependencies": {
+        "formik": "^2.2.9"
     }
 }
