--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "tailwindcss": "^3.1.0"
     },
     "dependencies": {
-        "formik": "^2.2.9"
+        "formik": "^2.2.9",
+        "react-dropzone": "^14.2.2"
     }
 }
